--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap");
 
 * {
-
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -12,7 +11,165 @@ li {
   list-style-type: none;
 }
 
-/* Navigation */
+section {
+  background-color: rgb(245, 245, 245);
+}
+
+button {
+  cursor: pointer;
+}
+
+.container{
+  padding: 50px 0 ;
+
+}
+
+.row {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
+.title {
+font-size: 120px;
+margin-bottom: 12px;
+text-align: left;
+line-height: 1;  
+}
+
+p {
+  line-height: 1.5;
+  font-size: 16px;
+
+}
+
+/* landing page */
+
+
+#landing-page {
+  min-height: 100vh;
+}
+
+.header__para {
+    font-size: 24px;
+    line-height: 2;
+    max-width: 450px;
+}
+
+ .social__list {
+  margin-top: 16px;
+  display: flex;
+ }
+
+.social__link {
+  background-color: red;
+  color: white;
+  padding: 6px;
+  width: 32px;
+  height: 32px;
+  font-size: 14px;
+  margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+.header {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 1000px;
+    padding: 0 30px;
+}
+
+.red{
+  color: red;
+}
+
+.title--secondary {
+  color: red;
+
+}
+
+a{
+  text-decoration: none;
+}
+
+.click {
+  transition: all 300ms ease;
+}
+
+.click:hover{
+  transform: scale(1.1);
+}
+
+.click:active {
+  transform: scale(0.8);
+}
+
+
+.mail__btn {
+  width: 70px;
+  height: 70px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: none;
+  background-color: red;
+  color: white;
+position: absolute;
+bottom: 32px;
+right: 40px;
+}
+
+.scroll {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
+
+.scroll__icon {
+  width: 20px;
+  height: 30px;
+  border: 2px solid #242424;
+  border-radius: 24px;
+    align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+
+.scroll__icon:after {
+  background-color: #242424;
+  content: "";
+  width: 4px;
+  height: 6px;
+  border-radius: 2px;
+  animation: scroll 1000ms infinite alternate-reverse;
+
+}
+
+
+@keyframes scroll {
+  0% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(-3px);
+  }
+}
+
+/* Navigation */ 
 nav {
   display: flex;
   justify-content: space-between;
@@ -20,7 +177,9 @@ nav {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 20px;
   height: 100px;
+  
 }
 
 .nav__link--list {
@@ -34,13 +193,89 @@ nav {
 }
 
 .nav__link {
-    margin: 0 12px;
-
+  margin: 0 12px;
 }
 
 .nav__link--anchor {
-text-decoration: none;
-font-size: 16px;
-color: rgb(24,24,24);
-font-weight: 700;
+  text-decoration: none;
+  font-size: 16px;
+  color: rgb(24, 24, 24);
+  font-weight: 700;
+}
+
+.fa-solid {
+  font-size: 20px;
+}
+
+
+/* projects */
+
+.section__title {
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px;
+}
+
+.project__img {
+  width: 100%;
+  transition: all 600ms ease;
+}
+
+.project__wrapper {
+position: relative;
+border-radius: 20px;
+box-shadow: 0 20 80 0 black .45;
+overflow: hidden;
+
+}
+.project__description{
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(-50%);
+  transition: opacity 300ms, transform 450ms ease;
+  color: rgb(255, 255, 255);
+  max-width: 550px;
+}
+
+.project__wrapper:hover .project__description {
+opacity: 1;
+transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__wrapper--bg {
+  opacity: 0.07;
+}
+
+.project__wrapper:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px)
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1d25;
+  opacity: 0.7;
+}
+
+.project__description--title {
+font-size: 40px;
+}
+
+.project__description--sub--title {
+margin-top: 8px;
+}
+
+.proeject__description--link {
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px; 0;
 }
