--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ li {
   list-style-type: none;
 }
 
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    padding-inline-start: 50px;
+    unicode-bidi: isolate;
+}
+
+
+
 
 
 section {
@@ -23,6 +34,7 @@ button {
 
 .container{
   padding: 50px 0 ;
+width: 100%;
 
 }
 
@@ -188,10 +200,11 @@ nav {
   display: flex;
 }
 
+
+
 #personal-logo {
   width: 50px;
   height: 50px;
-  filter: invert(1);
 }
 
 .nav__link {
@@ -247,7 +260,7 @@ transform: translateY(-50%);
 }
 
 .project__wrapper:hover .project__wrapper--bg {
-  opacity: 0.7;
+  opacity: 0.57;
 }
 
 .project__wrapper:hover .project__img {
@@ -262,7 +275,7 @@ transform: translateY(-50%);
   width: 100%;
   height: 100%;
   background-color: #1c1d25;
-  opacity: 0.7;
+  opacity: 0%;
 }
 
 .project__description--title {
@@ -281,4 +294,40 @@ margin-top: 8px;
 
 .project__description--para {
   margin: 16px; 0;
+}
+
+
+
+/* footer */
+
+#personal__logo--footer {
+  width: 70px;
+ 
+filter: invert(1);
+}
+
+footer {
+  background-color: #242424;
+  display: flex;
+padding: 6% 0%;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.footer___social--list {
+  width: 100%;
+  max-width: 500p;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 28px 0;
+}
+
+.footer__social--link, 
+.footer__copyright {
+  color: white;
 }
