--- a/style.css
+++ b/style.css
@@ -20,10 +20,6 @@ ul {
     unicode-bidi: isolate;
 }
 
-
-
-
-
 section {
   background-color: rgb(245, 245, 245);
 }
@@ -56,6 +52,36 @@ p {
   line-height: 1.5;
   font-size: 16px;
 
+}
+
+.link__hover-effect {
+  position: relative;
+}
+
+.link__hover-effect--white::after {
+  background-color: white;
+}
+
+
+.link__hover-effect--black:after {
+  background-color: rgb(0, 0, 0);
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 3px;
+  width: 0;
+  left: 0;
+
+  transition: all 300ms ease;
+} 
+
+
+.link__hover-effect:hover::after {
+  left: 0;
+  width: 100%;
 }
 
 /* landing page */
@@ -205,6 +231,9 @@ nav {
 #personal-logo {
   width: 50px;
   height: 50px;
+  opacity: 75%;
+  border-radius: 75%;
+
 }
 
 .nav__link {
@@ -222,6 +251,28 @@ nav {
   font-size: 20px;
 }
 
+/* modal */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50,);
+  width: 90%;
+  max-width: 1100px;
+  height: 700px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+}
+
+.modal__half {
+  width: 50%;
+  
+}
+
+
 
 /* projects */
 
@@ -236,11 +287,19 @@ nav {
   transition: all 600ms ease;
 }
 
+
+.project:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
+}
+
+
 .project__list{
   display: flex;
   flex-direction: column;
   margin-top: 50px;
   margin-bottom: 50px;
+  gap: 48px;
 }
 
 
@@ -257,7 +316,7 @@ overflow: hidden;
   top: 50%;
   left: 90px;
   transform: translateY(1000%);
-  transition: opacity 300ms, transform 450ms ease;
+  transition: opacity 400ms, transform 600ms ease;
   color: rgb(255, 255, 255);
   max-width: 550px;
 }
@@ -331,7 +390,6 @@ padding: 6% 0%;
   width: 100%;
   max-width: 500px;
   display: flex;
-  
   justify-content: space-around;
   margin-bottom: 28px 0;
 }
