--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ ul {
 
 section {
   background-color: rgb(245, 245, 245);
+  transition: all 300ms ease-in-out;
 }
 
 button {
@@ -89,6 +90,61 @@ p {
   width: 100%;
 }
 
+
+.nav,
+.scroll,
+.header {
+  opacity: 1;
+  visibility: visible;
+  transition: all 400ms 300ms ease-in;
+}
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 300ms 100ms ease;
+}
+
+
+.dark-theme .title, 
+.dark-theme .section__title, 
+.dark-theme .section__sub-title, 
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-solid,
+.dark-theme .header__para
+{
+  color: white;
+
+
+}
+
+.dark-theme section{
+  background-color: #242424;
+
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+  filter: invert();
+  color: white;
+}
+.dark-theme .scroll__icon {
+  border-color: white;
+
+}
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
+
+}
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: #242424
+}
+
+
 /* landing page */
 
 
@@ -132,7 +188,7 @@ input, textarea {
   border-left: none;
   border-right: none;
   height: 40px;
-  transition: all 450ms ease;
+  transition: all 300ms ease;
 }
 
 textarea {
@@ -155,7 +211,7 @@ input:hover, textarea:hover {
 }
 
 input:focus, textarea:focus {
-  border-color: #f06449;
+  border-color: #ff1313;
 }
 
 .header {
@@ -303,6 +359,8 @@ nav {
   border-radius: 10px;
   overflow: hidden;
   display: flex;
+  z-index: -1;
+  transition: visability 1s; z-index: 1s; box-shadow: .05s ease;
 }
 
 .modal--open .modal{
@@ -320,13 +378,17 @@ nav {
   flex-direction: column;
   justify-content: center; 
   position: relative;
+  transition: all 300ms ease-in;
 }
 
-
+.modal--open .modal__about,
+.modal--open .modal__contact {
+  transform: translateX(0%);
+}
 
 .modal__about {
   background-color: rgb(245, 245, 245);
-
+transform: translateX(-110%);
 }
 
 .modal__languages {
@@ -352,6 +414,7 @@ nav {
 .modal__contact {
   background-color: #242424;
   color: white;
+  transform: translateX(110%)
 }
 
 .modal__title {
@@ -392,8 +455,8 @@ transform: scale(1);
 
 
 .form__submit {
-  background-color: #f06449;
-  border: 2px solid #f06449;
+  background-color: #ff1313;
+  border: 2px solid #ff1313;
   color: white;
   font-weight: 700;
   width: 100%;
@@ -409,8 +472,8 @@ transform: scale(1);
 }
 
 .form__submit:active {
-  border-color: #f06449;
-  color: #f06449;
+  border-color: #ff1313;
+  color: #ff1313;
 }
 
 
@@ -430,7 +493,7 @@ transform: scale(1);
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -447,6 +510,7 @@ padding: 28px;
 
 .modal__overlay--visable {
   z-index: 1;
+  display: flex;
 }
 
 
@@ -595,6 +659,70 @@ padding: 6% 0%;
 .footer__social--link, 
 .footer__copyright {
   color: white;
+  padding-top: 28px;
 
 
+}
+
+
+
+/* shapes */
+
+/* first row 
+height=35vh
+
+secondrow
+70hv
+
+thirdrow
+height = 95
+
+shapes on first column
+width = 5vw
+second
+width = 50vw
+third
+width=80vw
+*/
+
+
+.shape {
+  position: fixed;
+}
+
+.shape--0{
+  top: 15vh;
+  left: 5vw;
+}
+.shape--1{
+  top: 15vh;
+  left: 50vw;
+}
+.shape--2{
+  top: 15vh;
+  left: 80vw;
+}
+.shape--3{
+  top: 50vh;
+  left: 5vw;
+}
+.shape--4{
+  top: 50vh;
+  left: 15vw;
+}
+.shape--5{
+  top: 50vh;
+  left: 80vw;
+}
+.shape--6{
+  top: 80vh;
+  left: 5vw;
+}
+.shape--7{
+  top: 80vh;
+  left: 15vw;
+}
+.shape--8{
+  top: 80vh;
+  left: 80vw;
 }
